{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 50,
  "lineage": "ef6c857e-7e1d-a4a1-e33f-86050ff1f16c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d375f49a4345cf0",
            "arn": "arn:aws:ec2:us-east-1:883664613994:elastic-ip/eipalloc-01d375f49a4345cf0",
            "association_id": "eipassoc-00de8af9395664c2f",
            "domain": "vpc",
            "id": "eipalloc-01d375f49a4345cf0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-035faa3577da5a57d",
            "private_dns": "ip-172-20-1-185.ec2.internal",
            "private_ip": "172.20.1.185",
            "public_dns": "ec2-34-233-144-229.compute-1.amazonaws.com",
            "public_ip": "34.233.144.229",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05ffe3c48a9991133",
            "arn": "arn:aws:ec2:us-east-1:883664613994:instance/i-09761743fc21ea97a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09761743fc21ea97a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a307242378ceeda5",
            "private_dns": "ip-172-20-1-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.220",
            "public_dns": "ec2-35-171-225-108.compute-1.amazonaws.com",
            "public_ip": "35.171.225.108",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0df61f113d6f0962f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2f6d5270a8022eb",
            "tags": {
              "Name": "bastion-server"
            },
            "tags_all": {
              "Name": "bastion-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e35e5787038b2729"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion-host",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three-tier-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:internet-gateway/igw-0118d5dbe6476dedc",
            "id": "igw-0118d5dbe6476dedc",
            "owner_id": "883664613994",
            "region": "us-east-1",
            "tags": {
              "Name": "3-tier-ig"
            },
            "tags_all": {
              "Name": "3-tier-ig"
            },
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/backend-alb/5aeed89ceaafa011",
            "arn_suffix": "app/backend-alb/5aeed89ceaafa011",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-105006582.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/backend-alb/5aeed89ceaafa011",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0ffbad5ad53b57a5f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06156a794314e02d9"
              },
              {
                "subnet_id": "subnet-0c2f6d5270a8022eb"
              }
            ],
            "subnets": [
              "subnet-06156a794314e02d9",
              "subnet-0c2f6d5270a8022eb"
            ],
            "tags": {
              "Name": "ALB-backend"
            },
            "tags_all": {
              "Name": "ALB-backend"
            },
            "vpc_id": "vpc-0df5d476936134464",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/backend-alb/5aeed89ceaafa011"
          },
          "dependencies": [
            "aws_lb_target_group.back_end",
            "aws_security_group.alb-backend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/frontend-alb/67e91b59a14e3b2e",
            "arn_suffix": "app/frontend-alb/67e91b59a14e3b2e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-816527393.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/frontend-alb/67e91b59a14e3b2e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0b7921da132e038a6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06156a794314e02d9"
              },
              {
                "subnet_id": "subnet-0c2f6d5270a8022eb"
              }
            ],
            "subnets": [
              "subnet-06156a794314e02d9",
              "subnet-0c2f6d5270a8022eb"
            ],
            "tags": {
              "Name": "ALB-Frontend"
            },
            "tags_all": {
              "Name": "ALB-Frontend"
            },
            "vpc_id": "vpc-0df5d476936134464",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/frontend-alb/67e91b59a14e3b2e"
          },
          "dependencies": [
            "aws_lb_target_group.front_end",
            "aws_security_group.alb-frontend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:listener/app/backend-alb/5aeed89ceaafa011/7b6847be9022dc84",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:targetgroup/backend-tg/81813f31d70ad0fc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:883664613994:listener/app/backend-alb/5aeed89ceaafa011/7b6847be9022dc84",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/backend-alb/5aeed89ceaafa011",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.back_end",
            "aws_lb_target_group.back_end",
            "aws_security_group.alb-backend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:listener/app/frontend-alb/67e91b59a14e3b2e/b28dc97756ba91de",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:targetgroup/frontend-tg/1f50e0f03e74ca10",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:883664613994:listener/app/frontend-alb/67e91b59a14e3b2e/b28dc97756ba91de",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/frontend-alb/67e91b59a14e3b2e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.alb-frontend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:targetgroup/backend-tg/81813f31d70ad0fc",
            "arn_suffix": "targetgroup/backend-tg/81813f31d70ad0fc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:883664613994:targetgroup/backend-tg/81813f31d70ad0fc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/backend-alb/5aeed89ceaafa011"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:883664613994:targetgroup/frontend-tg/1f50e0f03e74ca10",
            "arn_suffix": "targetgroup/frontend-tg/1f50e0f03e74ca10",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:883664613994:targetgroup/frontend-tg/1f50e0f03e74ca10",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:883664613994:loadbalancer/app/frontend-alb/67e91b59a14e3b2e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cust-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d375f49a4345cf0",
            "association_id": "eipassoc-00de8af9395664c2f",
            "connectivity_type": "public",
            "id": "nat-02512caa462522e43",
            "network_interface_id": "eni-035faa3577da5a57d",
            "private_ip": "172.20.1.185",
            "public_ip": "34.233.144.229",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2f6d5270a8022eb",
            "tags": {
              "Name": "3-tier-nat"
            },
            "tags_all": {
              "Name": "3-tier-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:route-table/rtb-042835e4610d267cb",
            "id": "rtb-042835e4610d267cb",
            "owner_id": "883664613994",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0118d5dbe6476dedc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-tier-pub-rt"
            },
            "tags_all": {
              "Name": "3-tier-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5d476936134464"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.three-tier-ig",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-pvt-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:route-table/rtb-06e406d31a561978e",
            "id": "rtb-06e406d31a561978e",
            "owner_id": "883664613994",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02512caa462522e43",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-tier-pvt-rt"
            },
            "tags_all": {
              "Name": "3-tier-pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5d476936134464"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a6d372cc78bd8dc",
            "region": "us-east-1",
            "route_table_id": "rtb-06e406d31a561978e",
            "subnet_id": "subnet-060085ce56aabff09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-pvt-rt",
            "aws_subnet.pub1",
            "aws_subnet.pvt3",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-4b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd5a536fce87b67a",
            "region": "us-east-1",
            "route_table_id": "rtb-06e406d31a561978e",
            "subnet_id": "subnet-0d9ca95c61bd2916d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-pvt-rt",
            "aws_subnet.pub1",
            "aws_subnet.pvt4",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-5a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c4602c7eed42d07",
            "region": "us-east-1",
            "route_table_id": "rtb-06e406d31a561978e",
            "subnet_id": "subnet-0eaf878803f47a083"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-pvt-rt",
            "aws_subnet.pub1",
            "aws_subnet.pvt5",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-6b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080ba5f0efc9268f5",
            "region": "us-east-1",
            "route_table_id": "rtb-06e406d31a561978e",
            "subnet_id": "subnet-0eae3ce98eab9ca14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-pvt-rt",
            "aws_subnet.pub1",
            "aws_subnet.pvt6",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-7a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03849932bb58a6f68",
            "region": "us-east-1",
            "route_table_id": "rtb-06e406d31a561978e",
            "subnet_id": "subnet-075ad3ae488fb96b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-pvt-rt",
            "aws_subnet.pub1",
            "aws_subnet.pvt7",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-8b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f84d05cb697c1ca",
            "region": "us-east-1",
            "route_table_id": "rtb-06e406d31a561978e",
            "subnet_id": "subnet-020cdfbe1837813c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-pvt-rt",
            "aws_subnet.pub1",
            "aws_subnet.pvt8",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd7bd40eb0e187ac",
            "region": "us-east-1",
            "route_table_id": "rtb-042835e4610d267cb",
            "subnet_id": "subnet-0c2f6d5270a8022eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.three-tier-ig",
            "aws_route_table.three-tier-pub-rt",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05067764b2eda6b1c",
            "region": "us-east-1",
            "route_table_id": "rtb-042835e4610d267cb",
            "subnet_id": "subnet-06156a794314e02d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.three-tier-ig",
            "aws_route_table.three-tier-pub-rt",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:security-group/sg-0ffbad5ad53b57a5f",
            "description": "Allow inbound traffic ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffbad5ad53b57a5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-backend-sg",
            "name_prefix": "",
            "owner_id": "883664613994",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-backend-sg"
            },
            "tags_all": {
              "Name": "alb-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5d476936134464"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-frontend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:security-group/sg-0b7921da132e038a6",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7921da132e038a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "883664613994",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5d476936134464"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:security-group/sg-03007e032d2ad7a27",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03007e032d2ad7a27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend-server-sg",
            "name_prefix": "",
            "owner_id": "883664613994",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-server-sg"
            },
            "tags_all": {
              "Name": "backend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5d476936134464"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb-backend-sg",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:security-group/sg-0e35e5787038b2729",
            "description": "Allow inbound traffic from bastion-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e35e5787038b2729",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from web layer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "appserver-SG",
            "name_prefix": "",
            "owner_id": "883664613994",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-host-server-sg"
            },
            "tags_all": {
              "Name": "bastion-host-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5d476936134464"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "book-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:security-group/sg-019878eb9bd07f5f3",
            "description": "Allow inbound ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019878eb9bd07f5f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql/aroura",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "book-rds-sg",
            "name_prefix": "",
            "owner_id": "883664613994",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "book-rds-sg"
            },
            "tags_all": {
              "Name": "book-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5d476936134464"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:security-group/sg-0c0b32fbe45ef346b",
            "description": "Allow inbound traffic ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0b32fbe45ef346b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend-server-sg",
            "name_prefix": "",
            "owner_id": "883664613994",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-server-sg"
            },
            "tags_all": {
              "Name": "frontend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5d476936134464"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb-frontend-sg",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:subnet/subnet-0c2f6d5270a8022eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2f6d5270a8022eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883664613994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pub-1a"
            },
            "tags_all": {
              "Name": "pub-1a"
            },
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:subnet/subnet-06156a794314e02d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06156a794314e02d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883664613994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pub-2b"
            },
            "tags_all": {
              "Name": "pub-2b"
            },
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:subnet/subnet-060085ce56aabff09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060085ce56aabff09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883664613994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pvt-3a"
            },
            "tags_all": {
              "Name": "pvt-3a"
            },
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:subnet/subnet-0d9ca95c61bd2916d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9ca95c61bd2916d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883664613994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pvt-4b"
            },
            "tags_all": {
              "Name": "pvt-4b"
            },
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:subnet/subnet-0eaf878803f47a083",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaf878803f47a083",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883664613994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pvt-5a"
            },
            "tags_all": {
              "Name": "pvt-5a"
            },
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:subnet/subnet-0eae3ce98eab9ca14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eae3ce98eab9ca14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883664613994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pvt-6b"
            },
            "tags_all": {
              "Name": "pvt-6b"
            },
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:subnet/subnet-075ad3ae488fb96b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075ad3ae488fb96b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883664613994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pvt-7a"
            },
            "tags_all": {
              "Name": "pvt-7a"
            },
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:subnet/subnet-020cdfbe1837813c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020cdfbe1837813c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883664613994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pvt-8b"
            },
            "tags_all": {
              "Name": "pvt-8b"
            },
            "vpc_id": "vpc-0df5d476936134464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883664613994:vpc/vpc-0df5d476936134464",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-004dbb21ee328ee15",
            "default_route_table_id": "rtb-01950dbddc4c0bfc0",
            "default_security_group_id": "sg-0446343b54ce4bbe0",
            "dhcp_options_id": "dopt-08f32ac0126c23c66",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df5d476936134464",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01950dbddc4c0bfc0",
            "owner_id": "883664613994",
            "region": "us-east-1",
            "tags": {
              "Name": "3-tier-vpc"
            },
            "tags_all": {
              "Name": "3-tier-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}